Fix realtime updates

--- a/app/views/channels/get_updates.js.erb
+++ b/app/views/channels/get_updates.js.erb
@@ -1,31 +1,32 @@
-<% @new_messages.each do |m| %>
+var donotify = false;
 
-//see if we already have this message
-var existing = $('#message_<%= m.id %>');
-if (existing.length == 0){
-    if (!weHaveFocus)
-        startNotify('<%= m.poster %>');
+<% @new_message_groups.each do |group| %>
 
-    var added = null;
+    if (topPoster() == '<%= group.poster %>')
+    {
+        <% group.messages.each do |m| %>
+            //see if we already have this message
+            var existing = $('#message_<%= m.id %>');
+            if (existing.length == 0)
+            {
+                var msg = $("<%= escape_javascript(render :partial => "channels/message", :object => m) %>");
+                var ul = getLatestContainer().find('.message_content');
+                msg.appendTo(ul);
+                msg.hide().fadeIn();
+                donotify = true;
+            }
+        <% end %>
+    }
+    else
+    {
+        var msggroup = $("<%= escape_javascript(render :partial => "channels/message_group", :object => group) %>");
 
-    var msg = $("<%= escape_javascript(render :partial => "channels/message", :object => m) %>");
-    var latestContainer = null;
-
-    if (topPoster() == '<%= m.poster %>:'){
-        latestContainer = getLatestContainer();
-        added = msg;
-    }else{
-        latestContainer = makeContainer('<%= m.poster %>', '<%= m.pretty_updated_at %>');
-        latestContainer.appendTo($('#message_list'));
-        added = latestContainer;
+        msggroup.appendTo($('#message_list'));
+        msggroup.hide().fadeIn();
+        donotify = true;
     }
 
-    var ul = latestContainer.find('.message_content');
-    msg.appendTo(ul);
-
-    added.hide().fadeIn();
     messageScrollBottom();
-}
 
 <% end %>
 
@@ -34,4 +35,11 @@ last_checked = '<%= Time.now.to_i %>';
 if (weHaveFocus)
 {
 	fadeUnread();
+}
+else
+{
+    if (donotify == true)
+    {
+        startNotify('<%= @new_message_groups.first.poster %>');
+    }
 }
