--- a/app/views/channels/get_updates.js.erb
+++ b/app/views/channels/get_updates.js.erb
@@ -1,10 +1,10 @@
 var donotify = false;
 
-<% @new_message_groups.each do |group| %>
+<% @new_message_groups.reverse.each do |group| %>
 
     if (topPoster() == '<%= group.poster %>')
     {
-        <% group.messages.each do |m| %>
+        <% group.messages.reverse.each do |m| %>
             //see if we already have this message
             var existing = $('#message_<%= m.id %>');
             if (existing.length == 0)
@@ -32,14 +32,16 @@ var donotify = false;
 
 last_checked = '<%= Time.now.to_i %>';
 
-if (weHaveFocus)
-{
-	fadeUnread();
-}
-else
-{
-    if (donotify == true)
+<% if not @new_message_groups.empty? %>
+    if (weHaveFocus)
     {
-        startNotify('<%= @new_message_groups.first.poster %>');
+            fadeUnread();
     }
-}
+    else
+    {
+        if (donotify == true)
+        {
+                    startNotify('<%= @new_message_groups.first.poster %>');
+        }
+    }
+<% end %>
