--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -16,19 +16,33 @@
 	</div>
 </div>
 <div id="sidebar">
-        <h3>Active Branches:</h3>
+        <h3>Navigation:</h3>
         <ul class="branch_list">
-            <% active_branches = @channel.top_active_branches %>  
-            <% if params[:branch_id].nil? %>
-                <% active_branches << nil if not active_branches.include? nil %>
-            <% else %>
-                <% active_branches << params[:branch_id] if not active_branches.include? params[:branch_id].to_i %>
-            <% end %>
-            <% active_branches.each do |bid| %>  
-                <li <%= "class='selectedbranch'" if bid.to_s == params[:branch_id].to_s %>>
-                <a href="/channels/<%= @channel.id %><%= "?branch_id=#{bid}" if bid %>" >
-                    <%= @channel.latest_for_branch(bid).summarize(22) %>
+            <li <%= "class='selectedbranch'" if not params[:branch_id] %>>
+            <a href="/channels/<%= @channel.id %>" >
+                <%= @channel.name %>
                 <span></span></a>
+            </li>
+            <% bid = params[:branch_id] %>
+            <% if bid %>
+                <% parents = @channel.parents_for_branch(bid) %>  
+                <% parents.each do |parent_bid| %>
+                    <li>
+                    <a href="/channels/<%= @channel.id %><%= "?branch_id=#{parent_bid}" %>" >
+                        <%= @channel.first_message_for_branch(parent_bid).summarize(22) %>
+                    <span></span></a>
+                    </li>
+                <% end %>
+
+                <% this_branch_msg = @channel.first_message_for_branch(bid) %>
+                <li class="selectedbranch">
+                <a href="/channels/<%= @channel.id %><%= "?branch_id=#{bid}" %>" >
+                    <% if this_branch_msg %>
+                        <%= this_branch_msg.summarize(22) %>
+                    <% else %>
+                        New Branch
+                    <% end %>
+                    <span></span></a>
                 </li>
             <% end %>
         </ul>
