--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -512,6 +512,10 @@ background-image: -moz-linear-gradient(top, #ffffff 0%,#faf7f4 3%, #f8f5f0 100%)
 	top:0px;
 }
 
+#sidebar ul li.childbranch a{
+	background-color: skyblue;
+}
+
 
 
 #main {
