--- a/app/views/channels/_message.erb
+++ b/app/views/channels/_message.erb
@@ -1,4 +1,4 @@
-<p id="message_<%= message.id %>" 
+<div class="message_entry" id="message_<%= message.id %>" 
 <% if message.poster != @user.alias and (@previously_last_checked.nil? or @previously_last_checked < message.updated_at) %>class="unread"<% end %>>
 <span class="buttons">
     <% if message.poster == @user.alias %>
@@ -11,14 +11,10 @@
 </span>
 <%= raw [message.marked_up_content] %>
 
-</p>
-
 <% if message.has_branch? %>
-    <% branch_message = @channel.first_message_for_branch message.id %>
-    <% if branch_message %>
-        <div class="branchpoint">
-            <%= link_to content_tag(:span, '')+"#{branch_message.summarize(80)}", "/channels/#{@channel.id}?branch_id=#{message.id}", :class => 'branch_link', :title => 'Click to view this branch.' %>
-        </div>
-    <% end %>
+    <%= render :partial => "branchpoint", :object => message %>
 <% end %>
+
+</div>
+
 
